Applying new CodeStyle